# slacksay

./: .gitignore  Pipfile  pyproject.toml  setup.cfg  setup.py
slacksay/: main.py
